# document-llm-toolkit

./: .gitignore  README.md  ab_demo.py  demo.py  eval_demo.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: __init__.py
src/api/: __init__.py  main.py
src/core/: __init__.py  processor.py
src/core/agents/: __init__.py  react_agent.py
src/evaluation/: __init__.py  ab_testing.py  complexity_analysis.py  contrastive_evaluation.py  document_coherence.py  llm_judge.py  metrics.py  oracle_experiments.py
src/utils/: __init__.py
tests/unit/: test_ab_testing.py  test_metrics.py
